// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test conversation/getters onlineParticipants 1`] = `
Array [
  Object {
    "activity": "ACTIVE",
    "address": "address2",
    "name": "name2",
    "peerId": "peerId2",
    "profilePicture": "profilePicture2",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;

exports[`Test conversation/getters otherParticipants 1`] = `
Array [
  Object {
    "activity": "ACTIVE",
    "address": "address",
    "name": "name",
    "peerId": "peerId",
    "profilePicture": "profilePicture",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;

exports[`Test conversation/getters typingParticipants 1`] = `
Array [
  Object {
    "activity": "TYPING",
    "address": "address2",
    "name": "name2",
    "peerId": "peerId2",
    "profilePicture": "profilePicture2",
    "state": "CONNECTED",
    "updatedAt": 123,
  },
]
`;
